--- a/job/templates/job/job_detail.html
+++ b/job/templates/job/job_detail.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="{% static "job/googleMap.js" jobDetail.jobNr %}"></script>
 {% endblock %}
 
-{% block nav %}{% include 'job/_nav.html' with jobNr=jobDetail.jobNr %}{% endblock %}
+{% block nav %}{% include 'job/_nav_admin.html' with jobNr=jobDetail.jobNr %}{% endblock %}
 
 {% block main %}
 
