--- a/job/templates/job/job_new.html
+++ b/job/templates/job/job_new.html
@@ -5,7 +5,7 @@
   <form class="" action="" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input type="submit" name="" value="Create">
+    <input type="submit" class="btn btn-primary btn-sm" value="Create">
   </form>
 
 {% endblock %}
