--- a/job/templates/job/jobs_list.html
+++ b/job/templates/job/jobs_list.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="{% static "job/style.css" %}"/>
 
 {% endblock %}
-{% block nav %}{% include 'job/_nav.html'%}{% endblock %}
+{% block nav %}{% include 'job/_nav_admin.html'%}{% endblock %}
 {% block main %}
 
 <table class="table table-striped table-sm">
