--- a/job/templates/job/job_base.html
+++ b/job/templates/job/job_base.html
@@ -16,7 +16,10 @@
           <div class="col-lg-2 ml-2" >
             <div id="sideNav">
               <div class="nav flex-column nav-pills my-5" id="v-pills-tab sideNav" role="tablist" aria-orientation="vertical">
-                <a class="nav-link {% if request.resolver_match.url_name == "my_view_name" %}active{% endif %}" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+                <form class="form-inline" action="{% url "job:joblist" %}">
+                   <input class="form-control  ml-2" type="search" name="search" placeholder="Nr/Street/ZIP/City" aria-label="Search">
+                   <button class="btn btn-outline-primary btn-sm  ml-2" type="submit">Search</button>
+                 </form>
                 <a class="nav-link {% if request.resolver_match.url_name == "my_view_name" %}active{% endif %}" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
                 <a class="nav-link {% if request.resolver_match.url_name == "my_view_name" %}active{% endif %}" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
                 <a class="nav-link {% if request.resolver_match.url_name == "my_view_name" %}active{% endif %}" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
