Add views for worktime aplication
Add Views:
MyJobsView - Listview of jobs where i was worked
AddHoursView - Form to add hours to job model in detail page.
Created templates for views, and refactor rest of templates.
Repair valiadate bug date in createform new job.

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "account/style.css" %}"/>
 {% endblock %}
 
-{% block content%}
+{% block main%}
 
   <div class="container my-5 w-50" id="loginContainer">
     <div class="jumbotron">
