--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,5 +1,5 @@
 {% extends "account/account_base.html" %}
-{% block content %}
+{% block main %}
 {% load bootstrap4 %}
 <div class="container">
   <div class="jumbotron">
