--- a/static/master/style.css
+++ b/static/master/style.css
@@ -23,3 +23,12 @@
 body{
   background-color: #003549;
 }
+
+#sideNav{
+position: sticky;
+top: 129px;
+z-index: 1;
+background-color: #F0FFE5;
+border: 1px solid #e9ecef;
+border-radius: 5px;
+}
