--- a/job/templates/job/job_detail.html
+++ b/job/templates/job/job_detail.html
@@ -42,6 +42,7 @@
           {% endif %}
           {% endfor %}
         </table>
+        <a href="{% url "worktime:addhours" jobDetail.jobNr %}"><button type="button" class="btn btn-primary btn-sm" name="button">Add hours</button></a>
       </div>
     </div>
       <div class="">
