--- a/worktime/templates/worktime/myjobs.html
+++ b/worktime/templates/worktime/myjobs.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block main %}
-{% include "job/_jobs_list.html"%}
+{% include "job/_jobs_list.html" with url="/hours/myjobs/"%}
 {% endblock %}
