--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                    <button class="btn btn-outline-primary btn-sm  ml-2" type="submit">Search</button>
                  </form>
                 <a class="nav-link {% if request.resolver_match.url_name == "myjobs" %}active{% endif %}"  href="{% url "worktime:myjobs" %}" role="tab" aria-controls="v-pills-profile" aria-selected="false">My jobs</a>
-                <a class="nav-link {% if request.resolver_match.url_name == "my_view_name" %}active{% endif %}" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+                <a class="nav-link {% if request.resolver_match.url_name == "myhours" %}active{% endif %}" href="{% url "worktime:myhours" %}" role="tab" aria-controls="v-pills-messages" aria-selected="false">My hours</a>
                 <a class="nav-link {% if request.resolver_match.url_name == "my_view_name" %}active{% endif %}" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
               </div>
             </div>
