--- a/worktime/templates/worktime/job_hours_view.html
+++ b/worktime/templates/worktime/job_hours_view.html
@@ -4,6 +4,6 @@
   <form  method="POST">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input type="submit" class="btn btn-primary btn-sm" value="Edit"><a href="{% url "worktime:deletehour" %}"><button type="button" class="btn btn-danger btn-sm ml-3">Delete</button></a>
+    <input type="submit" class="btn btn-primary btn-sm" value="Edit"><a href="{% url "worktime:deletehour" pk=jobHour.id %}"><button type="button" class="btn btn-danger btn-sm ml-3">Delete</button></a>
   </form>
 {% endblock %}
