--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == "joblist" %}active{% endif %}" href="{% url 'job:joblist' %}">Work places</a></li>
+          {% if user.is_superuser %}
+            <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == "employees" %}active{% endif %}" href="{% url 'worktime:employees' %}">Employees</a></li>
+          {% endif %}
           <li class="nav-item"><a class="nav-link" href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a></li>
         </ul>
         <!--  start here-->
@@ -68,7 +71,6 @@
                  </form>
                 <a class="nav-link {% if request.resolver_match.url_name == "myjobs" %}active{% endif %}"  href="{% url "worktime:myjobs" %}" role="tab" aria-controls="v-pills-profile" aria-selected="false">My jobs</a>
                 <a class="nav-link {% if request.resolver_match.url_name == "myhours" %}active{% endif %}" href="{% url "worktime:myhours" %}" role="tab" aria-controls="v-pills-messages" aria-selected="false">My hours</a>
-                <a class="nav-link {% if request.resolver_match.url_name == "my_view_name" %}active{% endif %}" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
               </div>
             </div>
           </div>
